2009-05-27  Michal Ludvig  <michal@logix.cz>

	* NEWS: Added info about --verbatim.
	* TODO: Added more tasks.

2009-05-27  Michal Ludvig  <michal@logix.cz>

	* S3/SortedDict.py: Add case-sensitive mode.
	* s3cmd, S3/S3.py, S3/Config.py: Use SortedDict() in 
	  case-sensitive mode to avoid dropping filenames
	  differing only in capitalisation
	* run-tests.py: Testsuite for the above.
	* NEWS: Updated.

2009-03-20  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Re-sign requests before retrial to avoid 
	  RequestTimeTooSkewed errors on failed long-running
	  uploads.
	  BTW 'request' now has its own class S3Request.

2009-03-04  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/Config.py, S3/S3.py: Support for --verbatim.

2009-02-25  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Fixed "put file.ext s3://bkt" (ie just the bucket name).
	* s3cmd: Fixed reporting of ImportError of S3 modules.
	* s3cmd: Fixed Error: global name 'real_filename' is not defined

2009-02-24  Michal Ludvig  <michal@logix.cz>

	* s3cmd: New command [sign]
	* S3/Utils.py: New function sign_string()
	* S3/S3.py, S3/CloudFront.py: Use sign_string().
	* NEWS: Updated.

2009-02-17  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.9
	  ----------------------

	* S3/PkgInfo.py: Updated to 0.9.9
	* NEWS: Compile a big news list for 0.9.9

2009-02-17  Michal Ludvig  <michal@logix.cz>

	* s3cmd.1: Document all the new options and commands.
	* s3cmd, S3/Config.py: Updated some help texts. Removed
	  option --debug-syncmatch along the way (because --dry-run
	  with --debug is good enough).
	* TODO: Updated.

2009-02-16  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Check Python version >= 2.4 as soon as possible.

2009-02-14  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/Config.py, S3/S3.py: Added --add-header option.
	* NEWS: Documented --add-header.
	* run-tests.py: Fixed for new messages.

2009-02-14  Michal Ludvig  <michal@logix.cz>

	* README: Updated for 0.9.9