@@ -1,3 +1,7 @@
+2009-05-28  Michal Ludvig  <michal@logix.cz>
+
+	* run-tests.py: Added --verbose mode.
+
 2009-05-27  Michal Ludvig  <michal@logix.cz>
 
 	* NEWS: Added info about --verbatim.
